# AlphaSniper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  system-architecture.md
migrations/: env.py
migrations/versions/: 375d1ef35454_add_content_columns.py  6304dc0a2143_add_insider_trades_earnings_events_.py  6e8e48a17a0f_initial_schema_articles_tickers_sources.py  84cd85d80c72_add_alert_rules_table.py  f5c09406b3f5_add_short_interests_table.py
plans/260412-0010-alphasniper-mvp/: phase-01-project-scaffold.md  phase-02-database-models.md  phase-03-finnhub-collector.md  phase-04-secondary-collectors.md  phase-05-dedup-taskiq-pipeline.md  phase-06-fastapi-endpoints.md  phase-07-ai-parser-gemini.md  phase-08-integration-tests.md  plan.md
plans/260412-2237-webapp-analytics/: phase-01-setup-layout.md  phase-02-dashboard.md  phase-03-news-feed.md  phase-04-ticker-detail.md  phase-05-sentiment-sources.md  plan.md
plans/260412-2258-phase2-enhancements/: phase-01-content-scraping.md  phase-02-ui-upgrade.md  phase-03-discord-webhook.md  phase-04-discord-bot.md  phase-05-admin-settings.md  phase-06-nuntio-research.md  plan.md
plans/260413-1509-discord-smallcap-scraping/: phase-01-market-cap-filter.md  phase-02-tickertick-collector.md  phase-03-discord-nuntio-collector.md  phase-04-deploy-config.md  plan.md
plans/260414-1005-mcap-ui-live-sources/: phase-01-market-cap-ui-badges.md  plan.md  (+1 more)
scratch/: full_cycle_verify.py  reset_raw.py  test_api_query.py  verify_db.py
scripts/: seed-sources.py
tests/: test_integration.py
(+148 files in other folders)
